# ask-my-docs-bot

./: .env.example  .gitignore  pyproject.toml  render.yaml
app/: config.py  main.py
app/line/: handler.py
app/llm/: claude.py
app/rag/: chunker.py  embeddings.py  pdf_parser.py  qa.py  vectorstore.py
doc/: 要件定義_LINE_RAG_QA_Bot.md
